--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : HaLow
   email : blah@email.test
   github : username
   twitter : username
