--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title:            Scribble
+title:            Tune
 description:      A jekyll theme. Because I scribble.
 url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
-signoff:          Scribble # Your name.
+signoff:          Tune # Your name.
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 google_analytics_id: # set tracking, UA-XXXX-Y.
 
