--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Tune
-description:      A jekyll theme. Because I scribble.
+description:      #
 url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
 signoff:          Tune # Your name.
