--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url:              # Site url.
 baseurl:          # Base url. ( if use subdirectory-like URL )
 signoff:          Tune # Your name.
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
-google_analytics_id: # set tracking, UA-XXXX-Y.
+google_analytics_id: UA-50182298-1 # set tracking, UA-XXXX-Y.
 
 links:
   - name:         About
